# MyChat

./: GitGui Test.txt  README.md  gitSequence.txt  hi.txt
Client/: CMakeLists.txt  Client.sln  Client.vcxproj  Client.vcxproj.filters  main.cpp
Server/: CMakeLists.txt  Server.sln  Server.vcxproj  StdAfx.h  main.cpp
